--- a/Audio/Notebook/SVM/Preprocessing [SVM].ipynb
+++ b/Audio/Notebook/SVM/Preprocessing [SVM].ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Speech Emotion Recognition - Signal Preprocessing\n",
-    "\n",
-    "A project for the French Employment Agency\n",
-    "\n",
-    "Telecom ParisTech 2018-2019"
+    "# Speech Emotion Recognition - Signal Preprocessing"
    ]
   },
   {
