--- a/Video/Notebooks/LGBM.ipynb
+++ b/Video/Notebooks/LGBM.ipynb
@@ -9,9 +9,7 @@
     }
    },
    "source": [
-    "<h1><center> Facial Emotion Recognition - Boosting on images </center></h1>\n",
-    "<center> A project for the French Employment Agency </center>\n",
-    "<center> Telecom ParisTech 2018-2019 </center>"
+    "# Facial Emotion Recognition - Boosting on images"
    ]
   },
   {
